# progresshub

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  opencode.json  package-lock.json  package.json  pyproject.toml
app/: htmy.py  main.py
app/components/: _safelist.py  ui.py
app/components/checkins/: __init__.py  progress_form.py
app/components/dashboard/: __init__.py  widgets.py
app/components/goals/: __init__.py  goal_card.py  goal_list.py  goal_progress.py  goal_setup.py  public_goal.py
app/components/layout/: __init__.py  document.py  navbar.py  not_found.py  page.py  sidebar.py
app/core/: config.py  dependencies.py
app/pages/: landing.py
app/repositories/: checkin_repo.py  goal_repo.py  user_repo.py
app/routes/: auth.py  checkin.py  dashboard.py  goals.py  leaderboard.py  onboarding.py  public.py  settings.py
app/schemas/: checkin.py  goal.py  user.py
app/services/: appwrite.py  openrouter.py
app/theme/: __init__.py  colors.py  theme.py  typography.py
app/utils/: cn.py
static/assets/: styles.css  tailwind.css
tests/: test_components.py  test_routes.py
