[project]
name = "progresshubv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "appwrite>=20.1.0",
    "fastapi>=0.137.2",
    "fasthx>=3.1.0",
    "git-filter-repo>=2.47.0",
    "htmy>=0.11.0",
    "httpx>=0.28.1",
    "playwright>=1.60.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_any_unimported = false
warn_return_any = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["appwrite.*", "fasthx.*", "htmy.*", "fastapi.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
